--- a/.env
+++ b/.env
@@ -1,3 +1,8 @@
 AWS_ACCESS_KEY_ID
 AWS_SECRET_ACCESS_KEY
 AWS_SESSION_TOKEN
+
+APP_NAME=weather-app
+AWS_DEFAULT_REGION=us-east-1
+USERNAME=liamjohnston
+PROJECT_NAME=pathwaysdojo
