--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,36 +8,18 @@ on:
       - 'Makefile'
       - '.github/workflows/**'
       - '*dockerfile'
-      - 'modules/**'
-      - '**.tf'
+      - 'weather-app/**'
+      - 'scripts/*.sh'
+      - '.env'
+
 jobs:
   terraform_plan:
     runs-on: ubuntu-latest
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      AWS_SESSION_TOKEN:  ${{ secrets.AWS_SESSION_TOKEN }} 
+      AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
     steps:
     - uses: actions/checkout@v2
-    - name: Terraform_Plan
-      run: make run_plan       
-
-  terraform_apply:
-    environment:
-      name: approval
-    needs: terraform_plan
-    runs-on: ubuntu-latest
-    env:
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      AWS_SESSION_TOKEN:  ${{ secrets.AWS_SESSION_TOKEN }} 
-    steps:
-    - uses: actions/checkout@v2
-    - name: Terraform_Plan
-      run: make run_plan
-    - name: Terraform_Apply
-      run: make run_apply  
-
-
-
-
+    - name: Build & Push
+      run: make run_build_and_push
