--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,11 +11,10 @@ on:
       - 'weather-app/**'
       - 'scripts/*.sh'
       - '.env'
+      - 'deploy/**/*.tf'
 
 jobs:
   build_and_push:
-    environment:
-      name: approval
     runs-on: ubuntu-latest
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -25,3 +24,27 @@ jobs:
     - uses: actions/checkout@v2
     - name: Build & Push
       run: make run_build_and_push
+
+  tf_plan:
+    runs-on: ubuntu-latest
+    env:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
+    steps:
+    - uses: actions/checkout@v2
+    - name: Run Terraform Plan
+      run: make run_plan
+
+  tf_plan:
+    environment:
+      name: approval
+    runs-on: ubuntu-latest
+    env:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
+    steps:
+    - uses: actions/checkout@v2
+    - name: Run Terraform Plan
+      run: make run_apply
