--- a/.env
+++ b/.env
@@ -2,6 +2,8 @@ AWS_ACCESS_KEY_ID
 AWS_SECRET_ACCESS_KEY
 AWS_SESSION_TOKEN
 
+TF_VAR_github_access_token=$GITHUB_ACCESS_TOKEN
+
 APP_NAME=weather-app
 AWS_DEFAULT_REGION=us-east-1
 USERNAME=liamjohnston
