--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ AWS_ACCESS_KEY_ID
 AWS_SECRET_ACCESS_KEY
 AWS_SESSION_TOKEN
 
-TF_VAR_github_access_token=$WORKFLOW_ACCESS_TOKEN
+TF_VAR_github_access_token
 
 APP_NAME=weather-app
 AWS_DEFAULT_REGION=us-east-1
