--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,8 +65,8 @@ jobs:
       TF_VAR_github_access_token: ${{ secrets.WORKFLOW_ACCESS_TOKEN }}
     steps:
     - uses: actions/checkout@v2
-    - name: Setup Directory
-      run : mkdir dist
+    # - name: Setup Directory
+    #   run : mkdir dist
     - name: Download Self Healing Function
       uses: actions/download-artifact@v2
       with:
