Implemented rebuild pipeline

--- a/self_healing_function/package.json
+++ b/self_healing_function/package.json
@@ -4,7 +4,7 @@
   "description": "self healing utility function for fargate service",
   "main": "src/index.js",
   "scripts": {
-    "start": "node src/index.js"
+    "start": "node -e 'require(\"src/index.js\").handler()'"
   },
   "author": "liam-johnston",
   "license": "ISC",
