--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,16 +65,12 @@ jobs:
       TF_VAR_github_access_token: ${{ secrets.WORKFLOW_ACCESS_TOKEN }}
     steps:
     - uses: actions/checkout@v2
-    # - name: Setup Directory
-    #   run : mkdir dist
     - name: Download Self Healing Function
       uses: actions/download-artifact@v2
       with:
         name: self_healing_function
         path: ./dist
-    - name: Testing
-      run: ls -R
-    # - name: Terraform_Plan
-    #   run: make run_plan
-    # - name: Run Terraform Apply
-    #   run: make run_apply
+    - name: Terraform_Plan
+      run: make run_plan
+    - name: Run Terraform Apply
+      run: make run_apply
